--- a/jupiter/Makefile
+++ b/jupiter/Makefile
@@ -1,3 +1,22 @@
+package = jupiter
+version = 1.0
+tarname = $(package)
+distdir = $(tarname)-$(version)
+
 all clean jupiter:
 	$(MAKE) -C src $@
+
+dist: $(distdir).tar.gz
+
+$(distdir).tar.gz: $(distdir)
+	tar chof - $(distdir) | gzip -9 -c >$(distdir).tar.gz
+	rm -rf $(distdir)
+
+$(distdir):
+	mkdir -p $(distdir)/src
+	cp Makefile $(distdir)
+	cp src/Makefile $(distdir)/src
+	cp src/main.c $(distdir)/src
+
+.PHONY: all clean dist
 
