Replace multiple $(distdir).tar.gz references with new $(disttar) variable

--- a/jupiter/Makefile
+++ b/jupiter/Makefile
@@ -2,20 +2,21 @@ package = jupiter
 version = 1.0
 tarname = $(package)
 distdir = $(tarname)-$(version)
+disttar = $(distdir).tar.gz
 
 all clean jupiter:
 	$(MAKE) -C src $@
 
-dist: $(distdir).tar.gz
+dist: $(disttar)
 
-distcheck: $(distdir).tar.gz
+distcheck: $(disttar)
 	gzip -cd $+ | tar xvf -
 	$(MAKE) -C $(distdir) all clean
 	rm -rf $(distdir)
-	@echo "*** Package $(disdir).tar.gz ready for distribution."
+	@echo "*** Package $(disttar) ready for distribution."
 
-$(distdir).tar.gz: FORCE $(distdir)
-	tar chof - $(distdir) | gzip -9 -c >$(distdir).tar.gz
+$(disttar): FORCE $(distdir)
+	tar chof - $(distdir) | gzip -9 -c >$(disttar)
 	rm -rf $(distdir)
 
 $(distdir):
@@ -26,7 +27,7 @@ $(distdir):
 
 # Use of leading - causes Make to ignore exit code and NOT fail on non-zero exit codes
 FORCE:
-	-rm $(distdir).tar.gz &> /dev/null
+	-rm $(disttar) &> /dev/null
 	-rm -rf $(distdir) &> /dev/null
 
 .PHONY: FORCE all clean dist distcheck
