Added prefix variable for allowing custom install paths to be specified in make command-line args.  Replaced manual file copying and attribute setting with install utility.

--- a/jupiter/Makefile
+++ b/jupiter/Makefile
@@ -4,6 +4,8 @@ tarname = $(package)
 distdir = $(tarname)-$(version)
 disttar = $(distdir).tar.gz
 
+export prefix=/usr/local
+
 all clean check install jupiter:
 	$(MAKE) -C src $@
 
