--- a/jupiter/src/Makefile
+++ b/jupiter/src/Makefile
@@ -12,5 +12,9 @@ check: all
 clean:
 	-rm jupiter
 
-.PHONY: all clean check
+install:
+	install -d $(prefix)/bin
+	install -m 0755 jupiter $(prefix)/bin
+
+.PHONY: all clean check install
 
