--- a/jupiter/src/Makefile
+++ b/jupiter/src/Makefile
@@ -16,5 +16,8 @@ install:
 	install -d $(prefix)/bin
 	install -m 0755 jupiter $(prefix)/bin
 
-.PHONY: all clean check install
+uninstall:
+	-rrm $(prefix)/bin/jupiter
+
+.PHONY: all clean check install uninstall
 
