--- a/jupiter/src/Makefile.in
+++ b/jupiter/src/Makefile.in
@@ -3,6 +3,21 @@ sources = main.c
 CC = gcc
 CFLAGS = -g -O2
 
+package = @PACKAGE_NAME@
+version = @PACKAGE_VERSION@
+tarname = @PACKAGE_TARNAME@
+
+# Prefix-related substitution variables
+prefix      = @prefix@
+exec_prefix = @exec_prefix@
+bindir      = @bindir@
+
+Makefile: Makefile.in ../config.status
+	cd .. && ./config.status $@
+
+../config.status: ../configure
+	cd .. && ./config.status --recheck
+
 all: jupiter
 
 jupiter: $(sources)
