Fix "dist" target creation of src folder which broke building of tarball.

--- a/jupiter/Makefile.in
+++ b/jupiter/Makefile.in
@@ -38,7 +38,7 @@ $(disttar): FORCE $(distdir)
 	rm -rf $(distdir)
 
 $(distdir):
-	mkdir -p $(distdir)/sr
+	mkdir -p $(distdir)/src
 	cp configure $(distdir)
 	cp Makefile.in $(distdir)
 	cp src/Makefile.in $(distdir)/src
