--- a/jupiter/src/Makefile.in
+++ b/jupiter/src/Makefile.in
@@ -12,6 +12,10 @@ prefix      = @prefix@
 exec_prefix = @exec_prefix@
 bindir      = @bindir@
 
+# VPATH-related substitution variables
+srcdir = @srcdir@
+VPATH =  @srcdir@
+
 Makefile: Makefile.in ../config.status
 	cd .. && ./config.status $@
 
@@ -21,7 +25,7 @@ Makefile: Makefile.in ../config.status
 all: jupiter
 
 jupiter: $(sources)
-	$(CC) $(CFLAGS) $(CPPFLAGS) -o $@ $+
+	$(CC) $(CFLAGS) $(CPPFLAGS) -o $@ $(srcdir)/$+
 
 check: all
 	./jupiter | grep "Hello from .*jupiter!"
