--- a/jupiter/configure.ac
+++ b/jupiter/configure.ac
@@ -1,7 +1,24 @@
-# Use square brackets as quotes in macro expansion
-AC_INIT([jupiter], [1.0])
+#                                               -*- Autoconf -*-
+# Process this file with autoconf to produce a configure script.
 
-# Generate Makefile and src/Makefile from Makefile.in and src/Makefile.in
-AC_CONFIG_FILES([Makefile src/Makefile])
+AC_PREREQ([2.69])
+AC_INIT([jupiter], [1.0], [bugs@jupiter.org])
+AC_CONFIG_SRCDIR([src/main.c])
+AC_CONFIG_HEADERS([config.h])
 
+# Checks for programs.
+AC_PROG_CC
+AC_PROG_INSTALL
+
+# Checks for libraries.
+
+# Checks for header files.
+AC_CHECK_HEADERS([stdlib.h])
+
+# Checks for typedefs, structures, and compiler characteristics.
+
+# Checks for library functions.
+
+AC_CONFIG_FILES([Makefile
+                 src/Makefile])
 AC_OUTPUT
